--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ Week2/*/*.terraform*
 Week2/*/*.tfstate*
 Week2/*/data
 Week2/data
-Week3/data/*.gz
+Week3/data/*.csv.gz
 Week3/data/*.json
 Week3/*/*.terraform*
 Week3/*/*.tfstate*
